overflow--hidden fix

--- a/scss/elements/_lists.scss
+++ b/scss/elements/_lists.scss
@@ -29,12 +29,12 @@
 			display: inline;
 			padding:0;
 			line-height: 24px;
-			margin-right: 16px;
+			margin-right: 4px;
 			&:after {
 			    content: "|";
 			    color: $iron;
 			    position: relative;
-                right: -10px;
+                right: -4px;
                 top: -2px;
 			}
 			/*span {
