--- a/scss/utilities/_height.scss
+++ b/scss/utilities/_height.scss
@@ -112,3 +112,15 @@
     }
 }
 @include max-height-util;
+
+
+    .test-height {
+        &:after {
+            content: "| test |";
+            color: $iron;
+            position: relative;
+            right: -4px;
+            top: -2px;
+        }
+    }
+
